# OS_Labs

./: README.md
Lab1/: Makefile  README.md  func.cpp  main.cpp  script.cmd  script.sh
Lab2/: CMakeLists.txt  README.md  test.cpp
Lab2/Lib/: lib.cpp  lib.hpp
Lab3/: CMakeLists.txt  README.md  main.cpp  script.sh  shared_memory.hpp
Lab4/: .gitignore  CMakeLists.txt  README.md  com.hpp  main.cpp  script.cmd
Lab5/: .gitignore  CMakeLists.txt  README.md  main.cpp  requirements.txt  script.cmd  script.sh  server.cpp  simulator.cpp  web.py
Lab5/templates/: index.html
Lab6/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
